crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__alternations_in_quantifier.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = (object { [A: (pair) @a  B: (shorthand_property_identifier) @b] @item }* @items)
---
[strings]
S00 "Beauty will save the world"
S01 "a"
S02 "b"
S03 "A"
S04 "B"
S05 "item"
S06 "items"
S07 "Test"
S08 "object"
S09 "pair"
S10 "shorthand_property_identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { a }
T2 = Struct  M1:1  ; { b }
T3 = Enum    M2:2  ; A | B
T4 = Struct  M4:1  ; { item }
T5 = ArrayStar(T4)  ; T4*
T6 = Struct  M5:1  ; { items }

[type_members]
M0: S01 → T0  ; a: <Node>
M1: S02 → T0  ; b: <Node>
M2: S03 → T1  ; A: T1
M3: S04 → T2  ; B: T2
M4: S05 → T3  ; item: T3
M5: S06 → T5  ; items: T5

[type_names]
N0: S07 → T6  ; Test

[entrypoints]
Test = 06 :: T6

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (object)                         08
  08   ε   [Arr]                            10
  10   ε                                    42, 21
  12   ε   [EndArr Set(M5)]                 14
  14   △   _                                20
  15  ...  
  16   ε   [EndObj Push]                    18
  18   ε                                    48, 12
  20                                        ▶
  21   ε   [EndArr Set(M5)]                 20
  23  ...  
  24   ε   [Set(M4)]                        16
  26   !   [Enum(M2)] (pair) [Node Set(M0) EndEnum]  24
  29   !   [Enum(M3)] (shorthand_property_identifier) [Node Set(M1) EndEnum]  24
  32   ε                                    26, 29
  34   ε   [Obj]                            32
  36   ▷   _                                40
  37   ε                                    36, 12
  39  ...  
  40   ε                                    34, 37
  42   ▽   _                                40
  43   ▷   _                                46
  44   ε                                    43, 12
  46   ε                                    34, 44
  48   ▷   _                                46
