crates/plotnik-compiler/src/emit/snapshots/plotnik_lib__emit__emit_tests__captures_struct_scope.snap
---
source: crates/plotnik-lib/src/emit/emit_tests.rs
---
Test = {(identifier) @a (number) @b} @item
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "item"
S4 "Test"
S5 "identifier"
S6 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }
T2 = Struct  M2:1  ; { item }
T3 = Struct  M3:1  ; { a }
T4 = Struct  M4:1  ; { b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T1  ; item: T1
M3: S1 → T0  ; a: <Node>
M4: S2 → T0  ; b: <Node>

[type_names]
N0: S4 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    08
  07  ...  
  08   ε   [Obj]                            10
  10   !   (identifier) [Node Set(M0)]      12
  12   ▷   (number) [Node Set(M1)]          14
  14   ε   [EndObj Set(M2)]                 16
  16                                        ▶
